--- a/src/index.css
+++ b/src/index.css
@@ -12,19 +12,16 @@
   }
 }
 
-
-
 @layer components {
   .input-field {
     @apply w-full px-5 py-3 h-[50px] border-2 border-[#EBEAED] rounded-full focus:outline-none focus:border-[#25DAC5] transition-all duration-200 bg-white text-[18px] text-[#1E0E62] font-light;
   }
-  
+
   .bg-section::before {
-    content: '';
+    content: "";
     @apply absolute inset-0;
-    background-color: rgba(47, 24, 147, 0.4); /* #2F1893 with 40% opacity */
+    background-color: rgba(47, 24, 147, 0.4);
+    /* #2F1893 with 40% opacity */
     z-index: 0;
   }
 }
-
-
