zooming out disable

--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,16 @@
 @layer base {
   html {
     @apply font-sans scroll-smooth;
+    touch-action: manipulation;
+    -ms-touch-action: manipulation;
+    overscroll-behavior: none;
   }
 
   body {
     @apply text-white antialiased bg-[#2F1893];
+    font-size: 16px;
+    user-select: none;
+    -webkit-user-select: none;
   }
 }
 
